--- a/static/css/style.css
+++ b/static/css/style.css
@@ -423,7 +423,7 @@ footer {
 .vintage-profile {
     background-color: var(--vintage-green);
     padding: 18px 30px;
-    border-radius: 0 15px 0 15px;
+    border-radius: 15px 15px 0 0;
 }
 
 .vintage-profile nav {
@@ -456,8 +456,15 @@ footer {
 
 
 /* filter */
-.card {
+.filter-body {
     background-color: rgb(146, 132, 132);
+    flex: 1 1 auto;
+    padding: 5px;
+    color: var(--vintage-white);
+}
+
+.content-profile {
+    padding: 0;
 }
 
 /* -----------  Form  -------------------------------------------------------------------------------------------- */
