--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -25,7 +25,7 @@
                         <a class="nav-link {{ user_profile }}" href="{% url 'user_profile' %}">Profile</a>
                     </li>
                     <li class="nav-item mx-1">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link {{ contact }}" href="{% url 'contact' %}">Contact Us</a>
                     </li>
                 </ul>
             </div>
