--- a/static/css/style.css
+++ b/static/css/style.css
@@ -530,7 +530,7 @@ iframe[style] {
 }
 
 
-/* -----------  Responsive --------------------------------------------------------------------------------------- */
+/* -----------  Contact us --------------------------------------------------------------------------------------- */
 .contact-container {
     background-color: black;
 }
@@ -539,11 +539,20 @@ iframe[style] {
     font-size: 10px;
 }
 
-.contact-image img{
+#contact-img {
     object-fit: cover;
     width: 100%;
     height: 100%;
+    display: inline;
 }
+
+#loader {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
 
 /* -----------  Responsive --------------------------------------------------------------------------------------- */
 
