--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,6 @@
     <script src="https://kit.fontawesome.com/4c85c0a16f.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
-
     <title>
         {% block title %} Vintage Cars {% endblock %}
     </title>
@@ -47,6 +46,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="{% static 'js/script.js' %}"></script>
+
+    {% block script %}
+    {% endblock %}
 </body>
 
 </html>
