--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -43,37 +43,10 @@
 {% block script %}
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script type="text/javascript">
+    let user_id = document.getElementById("user_id").value;
     (function(){
-        emailjs.init('Q3w1dwW3I9-ShlNjI');
+        emailjs.init(user_id);
         })();
 </script>
-<script type="text/javascript">
-    let loader = document.querySelector("#loader");
-    let contact_img = document.querySelector("#contact-img");
-    function show_hide() {
-        setTimeout(() => {
-            loader.style.display = "inline";
-            contact_img.style.display = "none";
-        }, 2500);
-        setTimeout(() => {
-                loader.style.display = "none";
-                contact_img.style.display = "inline";
-            }, 8500);
-    }
-    window.onload = function() {
-        document.getElementById('contact-form').addEventListener('submit', function(event) {
-            event.preventDefault();
-            show_hide();
-            // these IDs from the previous steps
-            emailjs.sendForm('vintage-cars', 'vintage-cars-temp', this)
-                .then(function() {
-                    console.log('SUCCESS!');
-                    let contactform = document.getElementById('contact-form');
-                    contactform.reset();
-                }, function(error) {
-                    console.log('FAILED...', error);
-                });
-        });
-    }
-</script>
+<script src="{% static 'js/sendemail.js' %}"></script>
 {% endblock %}
