--- a/static/css/style.css
+++ b/static/css/style.css
@@ -319,13 +319,21 @@ footer {
 	padding: 0;
 	overflow: hidden;
 	max-width: 1500px;
-	margin: 15px;
-
 }
 
 .image-container img {
     width: 100%;
     height: 100%;
+}
+
+.image-container .can-rent {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    z-index: 3;
+    height: 70px;
+    width: 70px;
+    line-height: 5;
 }
 
 .comment-line {
