--- a/templates/components/_footer.html
+++ b/templates/components/_footer.html
@@ -46,7 +46,7 @@
             </div>
             <!-- Disclaimer -->
             <div class="col-lg-4 col-md-12 footer-cont align-self-end order-lg-2">
-                <p>For portfolio 4 project purposes only.</p>
+                <p>For Portfolio Project 4 purposes only.</p>
             </div>
         </div>
     </div>
