--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<div class="container">
+<div class="container-fluid">
     <!-- carousel -->
     <div class="row">
         <div class="col-md-10 offset-md col-md-12">
@@ -15,38 +15,29 @@
                         aria-label="Slide 2"></button>
                     <button type="button" data-bs-target="#vintageCarsCarousel" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#vintageCarsCarousel" data-bs-slide-to="3"
-                    aria-label="Slide 4"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" class="d-block w-100"
+                        <img src="{% static 'images/vc-red-ford-mustang.jpg' %}" class="d-block w-100"
                             alt="Logo">
                         <div class="carousel-caption d-block black-bg">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h3 class="uppercase">Drive your dreams in real life</h3>
+                            <p>We bring your dreams closer from the past to the present on wheels!</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{% static 'images/vc-red-ford-mustang.jpg' %}" class="d-block w-100"
+                        <img src="{% static 'images/vc-vintage-cars.jpg' %}" class="d-block w-100"
                             alt="Ford Mustang">
                         <div class="carousel-caption d-block black-bg">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h3 class="uppercase">Book it! Drive it!</h3>
+                            <p>We provide the world with the best vintage cars that will never go out of style</p>
                         </div>
                     </div>
                     <div class="carousel-item">
                         <img src="{% static 'images/vc-blue-sedan.jpg' %}" class="d-block w-100" alt="Blue Sedan">
                         <div class="carousel-caption d-block black-bg">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="{% static 'images/vc-vintage-cars.jpg' %}" class="d-block w-100" alt="Vintage cars">
-                        <div class="carousel-caption d-block black-bg">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <h3>Start your engines now!</h3>
+                            <p>The best and magical experience you will never forget.</p>
                         </div>
                     </div>
                 </div>
@@ -63,11 +54,8 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col text-center">
-            <h1>VINTAGE CARS</h1>
-        </div>
-    </div>
 </div>
+
+{% include 'home/about.html' %}
 
 {% endblock %}
