--- a/templates/components/_footer.html
+++ b/templates/components/_footer.html
@@ -1,7 +1,7 @@
 {% load static %}
 
 <footer>
-    <div class="container-fluid">
+    <div class="container-fluid pt-5">
         <div class="row footer">
             <!-- Copyright -->
             <div class="col-lg-4 col-md-12 footer-cont align-self-end order-lg-1">
