--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <div class="container my-5">
     <div class="row">
         <div class="col text-center">
@@ -22,3 +24,47 @@
         </div>
     </div>
 </div>
+<div class="container-fluid how-container">
+    <img src="{% static 'images/world-map.png' %}" alt="World map background">
+    <div class="row how-content">
+        <div class="col-md-10 mx-auto">
+            <h2>How does it work?</h2>
+        </div>
+        <div class="col-md-10 mx-auto">
+            <div class="row mt-3">
+                <div class="col-md-4 col-sm-4 d-flex justify-content-center my-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="fs-3 text-center"><i class="fas fa-map-marked-alt"></i></p>
+                            <h5 class="card-title text-center mb-2 uppercase">Find your car</h5>
+                            <p class="card-text">
+                                You can browse our list of cars posted by our trusted members of the community.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 d-flex justify-content-center my-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="fs-3 text-center"><i class="fas fa-handshake"></i></p>
+                            <h5 class="card-title text-center mb-2 uppercase">Book your ride</h5>
+                            <p class="card-text">
+                                The booking and payment is easy and simple. You can book the car directly from the owner.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-4 d-flex justify-content-center my-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="fs-3 text-center"><i class="fas fa-car"></i></p>
+                            <h5 class="card-title text-center mb-2 uppercase">Drive!</h5>
+                            <p class="card-text">
+                                When all is good and payment is done, you can then drive your dream car!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
