Edit about.html content

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
         <div class="col-md-8 offset-md-2 my-3">
-            <p>Owning your own classic car is out of reach and very expensive to maintain. Some parts are not fabricated
+            <p>Owning your own classic car is out of reach and very expensive. Some parts are not fabricated
                 already and some are very hazardous for the environment. But here in Vintage Cars we bring the world of
                 classic cars to a whole new level by posting your favorite cars and making these classic or vintage
                 vehicles available for rent in a quick, simple and easy way. Our unique and seamless approach is
