Add card to display list of events in events page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -618,6 +618,12 @@ iframe[style] {
     display: none;
 }
 
+/* -----------  Events --------------------------------------------------------------------------------------- */
+
+.event-container {
+    width: 100%;
+}
+
 
 /* -----------  Responsive --------------------------------------------------------------------------------------- */
 
