--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -71,50 +71,7 @@
 	
 	<div>
 		<!-- pagination -->
-		<nav aria-label="Page navigation example">
-			<ul class="pagination justify-content-center">
-				{% if post_car.has_previous %}
-				<li class="page-item">
-					<a class="page-link" href="?page={{ post_car.previous_page_number }}">&laquo;</a>
-				</li>
-				{% else %}
-				<li class="page-item disabled">
-					<a class="page-link" href="#" tabindex="-1" aria-disabled="True">&laquo;</a>
-				</li>
-				{% endif %}
-		
-				{% if post_car.number|add:'-4' > 1 %}
-				<li class="page-item"><a class="page-link" href="?page={{ post_car.number|add:'-5' }}">&hellip;</a></li>
-				{% endif %}
-		
-				{% for i in post_car.paginator.page_range %}
-				{% if post_car.number == i %}
-				<li class="page-item active" aria-current="page">
-					<span class="page-link">
-						{{ i }}
-						<span class="sr-only">(current)</span>
-					</span>
-				</li>
-				{% elif i > post_car.number|add:'-5' and i < post_car.number|add:'5' %}
-				<li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-				{% endif %}
-				{% endfor %}
-		
-				{% if post_car.paginator.num_pages > post_car.number|add:'4' %}
-				<li class="page-item"><a class="page-link" href="?page={{ post_car.number|add:'5' }}">&hellip;</a></li>
-				{% endif %}
-		
-				{% if post_car.has_next %}
-				<li class="page-item">
-					<a class="page-link" href="?page={{ post_car.next_page_number }}">&raquo;</a>
-				</li>
-				{% else %}
-				<li class="page-item disabled">
-					<a class="page-link" href="#" tabindex="-1" aria-disabled="True">&raquo;</a>
-				</li>
-				{% endif %}
-			</ul>
-		</nav>
+		{% include 'components/_pagination.html' %}
 	</div>
 </div>
 
