--- a/templates/cars/car_detail.html
+++ b/templates/cars/car_detail.html
@@ -25,7 +25,8 @@
                 <span class="meta px-4">
                     Posted by
                     <span class="text-capitalize">{{ post_car.author }}</span> on
-                    {{ post_car.date_updated | date:'F d, Y' }}
+                    {{ post_car.date_created | date:'F d, Y' }}
+                    <small class="t-muted">(Last update: {{ post_car.date_updated | date:'F d, Y' }})</small>
                 </span>
             </div>
         </div>
@@ -104,12 +105,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col">
+                <div class="col comments-container">
                     <!-- comments -->
                     <h3>Comments</h3>
                     {% for comment in comments %}
                     <p>Commented by: <strong class="text-capitalize">{{ comment.name }}</strong> <small
-                            class="text-secondary">{{ comment.date_created }}</small></p>
+                            class="text-secondary">{{ comment.date_created | date:'M d, Y' }}</small></p>
                     <p>{{ comment.comment_body }}</p>
                     {% endfor %}
                 </div>
