--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -19,7 +19,7 @@
                         <a class="nav-link {{ cars }}" href="{% url 'cars' %}">Cars</a>
                     </li>
                     <li class="nav-item mx-1">
-                        <a class="nav-link" href="{% url 'events' %}">Event</a>
+                        <a class="nav-link {{ events }}" href="{% url 'events' %}">Event</a>
                     </li>
                     <li class="nav-item mx-1">
                         <a class="nav-link {{ user_profile }}" href="{% url 'user_profile' %}">Profile</a>
