--- a/static/css/style.css
+++ b/static/css/style.css
@@ -67,6 +67,10 @@ footer {
     color: var(--vintage-red);
 }
 
+.t-muted {
+    color: gray;
+}
+
 .uppercase {
     text-transform: uppercase;
 }
@@ -400,6 +404,11 @@ footer {
     border: none;
 }
 
+.comments-container {
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 10px 20px;
+}
+
 
 /* -----------  User Profile  ---------------------------------------------------------------------------------- */
 .up-button {
@@ -622,6 +631,15 @@ iframe[style] {
 
 .event-container {
     width: 100%;
+}
+
+.event-img {
+    width: 33.3%;
+}
+
+.event-img img {
+    width: 100%;
+    height: 100%;
 }
 
 
