Modify some css style

--- a/templates/home/about.html
+++ b/templates/home/about.html
@@ -37,7 +37,7 @@
                         <div class="card-body">
                             <p class="fs-3 text-center"><i class="fas fa-map-marked-alt"></i></p>
                             <h5 class="card-title text-center mb-2 uppercase">Find your car</h5>
-                            <p class="card-text">
+                            <p class="card-text c-text">
                                 You can browse our list of cars posted by our trusted members of the community.
                             </p>
                         </div>
@@ -48,7 +48,7 @@
                         <div class="card-body">
                             <p class="fs-3 text-center"><i class="fas fa-handshake"></i></p>
                             <h5 class="card-title text-center mb-2 uppercase">Book your ride</h5>
-                            <p class="card-text">
+                            <p class="card-text c-text">
                                 The booking and payment is easy and simple. You can book the car directly from the owner.
                             </p>
                         </div>
@@ -59,7 +59,7 @@
                         <div class="card-body">
                             <p class="fs-3 text-center"><i class="fas fa-car"></i></p>
                             <h5 class="card-title text-center mb-2 uppercase">Drive!</h5>
-                            <p class="card-text">
+                            <p class="card-text c-text">
                                 When all is good and payment is done, you can then drive your dream car!
                             </p>
                         </div>
