--- a/templates/events/event_detail.html
+++ b/templates/events/event_detail.html
@@ -28,6 +28,8 @@
                 </figure>
                 <!-- Post content-->
                 <section class="mb-5">
+                    <h4>Where?</h4>
+                    <p>{{ event.location }} on {{ event.event_date }}</p>
                     <p class="fs-5 mb-4">{{ event.content | safe }}</p>
                 </section>
             </article>
