--- a/templates/events/edit_event.html
+++ b/templates/events/edit_event.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Post{% endblock %}
+{% block title %}Edit Post{% endblock %}
 
 {% block content %}
 <div class="page-wrapper bg-dark p-t-100 p-b-50 mx-auto">
     <div class="col-md-8 mx-5 py-5">
         <div class="card-6">
             <div class="card-heading">
-                <h2 class="title">Add event</h2>
+                <h2 class="title">Update event</h2>
             </div>
             <div class="card-body">
                 <form method="POST">
                     {% csrf_token %}
                     {{ form.as_p }}
                 </form>
-                <button class="btn btn-success mt-3" type="submit">Post Event</button>
+                <button class="btn btn-success mt-3" type="submit">Update Event</button>
             </div>
         </div>
     </div>
