--- a/templates/events/event_detail.html
+++ b/templates/events/event_detail.html
@@ -15,7 +15,7 @@
                     <h1 class="fw-bolder mb-1">{{ event.event_title }}</h1>
                     <!-- Post meta content-->
                     <div class="t-muted fst-italic mb-2">
-                        Posted on {{ event.date_created | date:'d F, Y' }} by {{ event.author }}
+                        Posted on {{ event.date_created | date:'d F, Y' }} by <span class="text-capitalize">{{ event.author }}</span>
                     </div>
                 </header>
                 <!-- Preview image figure-->
