--- a/templates/events/events_list.html
+++ b/templates/events/events_list.html
@@ -17,9 +17,9 @@
             <div class="row g-0">
                 <div class="col-md-4 event-img">
                     {% if "placeholder" in event.event_image.url %}
-                        <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
+                    <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
                     {% else %}
-                        <img src="{{ event.event_image.url }}" alt="Event Image">
+                    <img src="{{ event.event_image.url }}" alt="Event Image">
                     {% endif %}
                 </div>
                 <div class="col-md-8">
@@ -46,7 +46,8 @@
                                 <a href="{% url 'edit_event' event.pk %}" class="btn btn-warning">Edit</a>
                             </div>
                             <div class="col-md-2 col-3 py-1">
-                                <button class="btn btn-danger">Delete</button>
+                                <button type="button" class="btn btn-danger" data-bs-toggle="modal"
+                                    data-bs-target="#mod-delete-event">Delete</button>
                             </div>
                             {% endif %}
                         </div>
@@ -54,9 +55,29 @@
                 </div>
             </div>
         </div>
+        <!-- Modal to confirm post deletion -->
+        <div class="modal fade" id="mod-delete-event" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+            aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Delete Event</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        You clicked delete button. Are you sure you want to delete this event?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                        <a href="{% url 'delete_event' event.pk %}">
+                            <button type="button" class="btn btn-danger">Delete</button>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
         {% endfor %}
     </div>
 </div>
-
 
 {% endblock %}
