--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -67,7 +67,7 @@
         <!-- Show all post if the author is the user -->
         {%  for post in post_car  %}
         {% if user.id is post.author.id %}
-        <div class="col-lg-4 col-md-12 contain-photo g-0">
+        <div class="col-lg-4 col-md-12 contain-photo g-0 px-2">
             <div class="row">
                 <div class="col-lg-4 col-md-12">
                     <div class="view-more text-white text-center">
